Bidi support for alternate text: reorder the text correctly, align text and icon to the right when direction is right-to-left, and create a bidi embedding when the alternate text is displayed inline. Bug 345954, r=uriber, sr=bzbarsky